# NetworkWarden

./: .env.example  .gitignore  FIXES.md  README.md  config.py  pyproject.toml  requirements.txt  run.sh  setup.sh
data/: sample_dataset.csv
scripts/: __init__.py  alert.py  classifier.py  collector.py  device_tracker.py  features.py  infer.py  train.py
tests/: test_classifier.py  test_device_tracker.py  test_features.py
